Fix a bug where .row would overflow at the the right side at small screen sizes, improve each(4) logical component centering for small screens and make .toggle-gpaphs buttons bigger

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -37,10 +37,10 @@ a.active:hover {
     white-space: pre;
 }
 
-.row {
-    margin-right: 0;
-    margin-left: 0;
-}
+// .row {
+//     margin-right: 0;
+//     margin-left: 0;
+// }
 
 .input-group {
     margin-bottom: 0;
@@ -53,10 +53,10 @@ a.active:hover {
 }
 
 @media screen and (max-width: 500px) {
-    .right_col > .row {
-        margin-left: -20px;
-        margin-right: -30px;
-    }
+    // .right_col > .row {
+    //     margin-left: -20px;
+    //     margin-right: -30px;
+    // }
 }
 
 .component-title {
@@ -179,6 +179,8 @@ svg {
     }    
     @media screen and (max-width: 500px) {
         text-align: center;
+        margin-left: auto;
+        margin-right: auto;
         header {
             border-bottom: 1px solid #E6E9ED;
         }
@@ -224,21 +226,6 @@ svg {
     @media screen and (max-width: 768px) {
         text-align: center;
     }
-    @media screen and (max-width: 500px) {                
-        .btn-group {
-            .btn {
-                margin-top: 1px;
-                margin-left: 16.5%; // 66.6 / 4 
-                width: 66.6%;                
-            }
-        }
-        .graph {
-            width: 80%;
-            // min-width: 300px;
-            overflow-x: scroll;
-            overflow-y: hidden;
-        }
-    }    
     @media screen and (max-width: 550px) {
         .InputFormContainer {
             text-align: center;
@@ -255,7 +242,24 @@ svg {
                 }                
             }
         }
-    }    
+    }
+    @media screen and (max-width: 500px) {
+        margin-left: auto;
+        margin-right: auto;             
+        .btn-group {
+            .btn {
+                margin-top: 1px;
+                margin-left: 16.5%; // 66.6 / 4 
+                width: 66.6%;                
+            }
+        }
+        .graph {
+            width: 80%;
+            // min-width: 300px;
+            overflow-x: scroll;
+            overflow-y: hidden;
+        }
+    }
     input {
         transition: background-color 200ms ease-in;
     }
@@ -322,6 +326,13 @@ svg {
         .btn.active span.glyphicon {
             display: inline;
         }
+        @media screen and (max-width: 400px) {
+            .btn {
+                margin-top: 1px;
+                margin-left: 16.5%;
+                width: 66.6%;
+            }
+        }
     }
     .dropdown_container {
         display: inline-block;
@@ -331,6 +342,8 @@ svg {
     }    
     @media screen and (max-width: 500px) {
         text-align: center;    
+        margin-left: auto;
+        margin-right: auto;             
         .graph {
             width: 80%;
             // min-width: 300px;
@@ -365,6 +378,9 @@ svg {
             text-decoration: underline;
         }
     }
+    tbody {
+        table-layout: fixed;                
+    }
     .table-filters {
         h4, .dropdown {
             display: inline-block;
@@ -382,7 +398,7 @@ svg {
                   display: block;                 
                 }
             }
-            @media screen and (max-width: 500px) {
+            @media screen and (max-width: 500px) {                
                 .dropdown_container,
                 .reset-btn-container {
                     width: 100%;
@@ -525,6 +541,8 @@ svg {
     }
     @media screen and (max-width: 500px) {
         text-align: center;
+        margin-left: auto;
+        margin-right: auto;             
         #modal-button {
             padding: 8px 14px;
             font-size: 16px;            
